--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   align-items: center;
   justify-items: center;
 }
+
 #top-navbar {
     display: flex;
     justify-content: space-between;
@@ -12,6 +13,60 @@ body {
     padding: 10px 20px;
     background-color: white;
     border-bottom: 1px solid #ccc;
+    overflow: hidden;
+}
+
+#login-content {
+  display: flex;
+  justify-content: center; 
+  align-items: center;     
+  height: 100vh;           
+  width: 100vw;           
+  border: 1px solid black; 
+}
+
+#form-login {
+  font-size: 14px;
+  border-radius: 10px;
+  padding:10px;
+  display: flex;
+  background: #c7dee8;
+}
+
+.form-group {
+ display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.form-button {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+}
+
+#form-login label {
+  width: 100px;
+  margin-right: 10px; 
+}
+
+#form-login button {
+  font-size: 14px;
+  color: #FFFFFF;
+  width: 100px;
+  height: 30px;
+  border: 0px;
+  background:#4cb0dd;
+  border-radius: 10px;
+}
+
+#form-login input {
+  min-height: 30px;
+  font-size: 15px;
+  flex: 1;  
+  border-radius: 10px;
+  border: 0px;
 }
 
 .nav-left, .nav-right {
@@ -37,14 +92,36 @@ body {
     margin-left: 10px;
 }
 
+#dashboard-head {
+  display:flex;
+  width: 100vw;
+  height: 10vh;
+  background-color: blue;
+}
+
+#dashboard-body {
+  display:flex;
+  width: 100vw;
+  height: 90vh;
+  background-color: green;
+}
+
+#dashboard-sidebar {
+  display:flex;
+  width: 200px;
+  max-width: 200px;
+  min-width: 200px;
+  height: 100%;
+  background-color: red;
+}
+
 #top-searchbar {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    width: 100%;
-    max-width: 800px;
-    margin: auto;
-    padding: 5px;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: white;
+    border-bottom: 1px solid #ccc;
 }
 
 #top-header {
@@ -65,7 +142,7 @@ body {
 #category-dropdown-menu {
     display: flex;
     align-items: center;
-    padding: 5px 10px;
+    padding: 1px 10px;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -94,8 +171,8 @@ body {
 #search-bar {
     display: flex;
     align-items: center;
-    width: 100%;
-    max-width: 600px;
+    min-width: 100%;
+    max-width: 100%;
     border: 2px solid #ccc;
     border-radius: 30px;
     overflow: hidden;
@@ -162,34 +239,31 @@ body {
   row-gap: 10px;
 }
 
+.content-rule {
+  max-width: 50%;
+  min-width: 50%;
+}
+
 #carousel-slide {
   margin: auto;
-  background: black;
-  width: 50%;
+  width: 100%;
   overflow-x: auto;
   white-space: nowrap;
   scrollbar-width: thin;
-}
-
-#main-slide-carousel {
-  display: flex;
-  gap: 10px; 
+  border-radius: 10px;
 }
 
 #main-slide-carousel img {
-  width: 500px;
-  height: auto;
-  border-radius: 10px;
-  object-fit: cover;
-}
-
-#destination-widgets, #favorites, #user-zone, #flashsale-highlight {
   width: 50%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 #fav-widgets-icons {
   display: flex;
   flex-direction: row;
+  overflow: scroll;
   overflow-x: auto;
   scrollbar-color: #fff transparent ;
   gap: 10px;
@@ -202,7 +276,6 @@ body {
 
 .widget-icon img {
   max-width: 50px;
-  max-height: 50px;
   background: #e1f1ff;
   border-radius: 10px;
 }
@@ -224,7 +297,8 @@ body {
 }
 
 #banner img {
-  max-width: 95%;
+  min-width: 100%;
+  max-width: 100%;
 }
 
 #user-zone {
@@ -263,7 +337,6 @@ body {
 
 #flashsale-highlight {
   background: url('./assets/blibli/flashsale-bg.webp') no-repeat center center;
-  min-height: 100px;
 }
 
 #footer {
@@ -272,24 +345,71 @@ body {
   align-content: center;
   align-items: center;
   justify-content:center;
-  padding: 10px;
-
+  padding-top: 1%;
+  height: 800px;
+  display:flex;
+  flex-direction: column;
+  gap:50px;
 }
 
 #footer-top {
   display:flex;
+  width:100%;
   flex-direction: row;
-  height: 30%;
+  height: 50%;
   justify-content: center;
   gap: 10%;
   border-bottom: 2px solid white;
 }
 
-#footer-bottom {
+#footer-middle {
   height: 10%;
+  display:flex;
+  width:100%;;
+  flex-direction:row;
+  align-content: center;
+  align-items: center;
+  justify-content:center;
+  padding: 0.1% 0%;
+  gap:10px;
 }
 
-#footer-column ul{
+#footer-bottom {
+  color:#fff;
+  background: #221A2A;
+  height: 100%;
+  width:100%;
+  border-top: 2px solid white;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-content: center;
+  align-items: center;
+  justify-content:center;
+}
+
+.footer-bottom-link-row {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
+
+#footer-options-container {
+  background:red;
+  width: 500px;
+  height:50px;
+}
+
+#footer-icon-container {
+  width: 100px;
+}
+
+#footer-icon-container img {
+  width:100%;
+}
+
+
+#footer-column ul, .link-column ul{
   list-style: none;
   margin: 0;
   padding: 0;
@@ -302,10 +422,97 @@ body {
   font-size: 18px;
 }
 
-#footer-column ul li a {
+#footer-column ul li a, .link-column ul li a {
   color: white;
   font-size: 12px;
   text-decoration: none;
+}
+
+#flashsale-highlight {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  border-radius:20px;
+}
+
+#flashsale-header {
+  width:100%;
+}
+
+#flashsale-content {
+  min-width:100%;
+  min-height:10%;
+  max-width:100%;
+  display: flex;
+  flex-direction:row;
+  gap: 10px;
+  padding: 10px;
+}
+
+#flashsale-product-info {
+  margin:2% 0 4% 0;
+}
+
+#flashsale-banner-container {
+  width:15%;
+  max-width: 15%;
+  heigth: 100%;
+}
+
+#flashsale-banner-container img {
+  heigth: 100%;
+  width: 100%;
+}
+
+/* FIXME */
+#flashsale-scroll-container {
+  width:85%;
+  max-width: 85%;
+  margin-right: 3%;
+  display:flex;
+  flex-direction:row;
+  overflow-x: auto;
+  white-space: nowrap;
+  scrollbar-width: thin;
+  gap: 10px;
+}
+
+.flashsale-product-card {
+  width: 20%;
+  max-width: 15%;
+  background:#fff;
+  border-radius:10px;
+  padding:10px;
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+}
+
+.flashsale-product-img {
+  max-width:100%;
+  object-fit: contain;
+  margin: 1%;
+}
+
+
+#flashsale-product-stock-bar {
+  min-width: 100%;
+  max-width: 100%;
+  width: 100%;
+  height: 30%;
+  border-radius:20px;
+  background: grey;
+  margin-top: 2%;
+}
+
+#flashsale-product-stock-bar-progress {
+  min-width: 0%;
+  max-width: 100%;
+  width: 70%;
+  height:100%;
+  border-radius:20px;
+  background: green;
+
 }
 
 
